@@ -4,13 +4,18 @@ import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.HashSet;
 import java.util.List;
-import java.util.NoSuchElementException;
+import java.util.stream.Collectors;
+
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import com.intellimart.dto.*;
+
+import com.intellimart.dto.OrderDto;
+import com.intellimart.dto.SellerOrderDto;
 import com.intellimart.entities.*;
 import com.intellimart.repos.*;
+import com.intellimart.security.UserPrincipal;
+
 import lombok.RequiredArgsConstructor;
 
 @Service
@@ -25,16 +30,36 @@ public class OrderServiceImpl implements OrderServiceInterface {
     private final SellerRepo sellerRepo;
 
     @Override
-    public OrderDto placeOrder(Long userId, Long addressId) {
-        // Bridge User ID (120) to Customer (207)
-        Customer customer = customerRepo.findByUser_Id(userId)
-                .orElseThrow(() -> new NoSuchElementException("Customer profile not found"));
+    public OrderDto placeOrder(Long customerId, Long addressId) {
 
-        Address address = addressRepo.findById(addressId)
-                .orElseThrow(() -> new NoSuchElementException("Address not found"));
+        Customer customer = customerRepo.findByUser_Id(customerId).orElseThrow();
 
-        // Use Customer 207 to fetch the actual cart items
-        List<CartItem> cartItems = cartRepo.findByCustomer_IdAndIsDeletedFalse(customer.getId());
+        Address address =
+                addressRepo.findByAidAndCustomer_Id(addressId, customer.getId())
+                        .orElseThrow(() -> new RuntimeException("Invalid address"));
+
+        return internalPlaceOrder(customer, address);
+    }
+
+    @Override
+    public OrderDto placeOrder(Authentication auth, Long addressId) {
+
+        UserPrincipal principal = (UserPrincipal) auth.getPrincipal();
+
+        Customer customer =
+                customerRepo.findByUser_Id(principal.getId()).orElseThrow();
+
+        Address address =
+                addressRepo.findByAidAndCustomer_Id(addressId, customer.getId())
+                        .orElseThrow(() -> new RuntimeException("Invalid address"));
+
+        return internalPlaceOrder(customer, address);
+    }
+
+    private OrderDto internalPlaceOrder(Customer customer, Address address) {
+
+        List<CartItem> cartItems =
+                cartRepo.findByCustomer_IdAndIsDeletedFalse(customer.getId());
 
         if (cartItems.isEmpty()) throw new RuntimeException("Cart empty");
 
@@ -47,33 +72,51 @@ public class OrderServiceImpl implements OrderServiceInterface {
         order.setLineItems(new HashSet<>());
 
         for (CartItem c : cartItems) {
+
             Product p = c.getProduct();
+
             OrderLineItem li = new OrderLineItem();
             li.setOrder(order);
             li.setProduct(p);
             li.setQuantity(c.getQuantity());
             li.setUnitPrice(p.getPrice().doubleValue());
+
             order.getLineItems().add(li);
-            order.setTotalAmount(order.getTotalAmount().add(p.getPrice().multiply(BigDecimal.valueOf(c.getQuantity()))));
-            c.setDeleted(true); // Clear items from cart after checkout
+
+            order.setTotalAmount(
+                    order.getTotalAmount().add(
+                            p.getPrice().multiply(BigDecimal.valueOf(c.getQuantity()))
+                    )
+            );
+
+            c.setDeleted(true);
         }
+
         return toDto(orderRepo.save(order));
     }
 
     @Override
     public List<OrderDto> getCustomerOrdersByEmail(String email) {
         Customer customer = customerRepo.findByUser_Email(email).orElseThrow();
-        return orderRepo.findByCustomer_IdAndIsDeletedFalse(customer.getId()).stream().map(this::toDto).toList();
+        return orderRepo.findByCustomer_IdAndIsDeletedFalse(customer.getId())
+                .stream().map(this::toDto).toList();
+    }
+
+    @Override
+    public List<OrderDto> getCustomerOrdersById(Long customerId) {
+        return orderRepo.findByCustomerId(customerId)
+                .stream().map(this::toDto).collect(Collectors.toList());
+    }
+
+    @Override
+    public List<OrderDto> getAllOrders() {
+        return orderRepo.findByIsDeletedFalse()
+                .stream().map(this::toDto).toList();
     }
 
     @Override
     public OrderDto getOrderById(Long orderId) {
         return toDto(orderRepo.findById(orderId).orElseThrow());
-    }
-
-    @Override
-    public List<OrderDto> getAllOrders() {
-        return orderRepo.findByIsDeletedFalse().stream().map(this::toDto).toList();
     }
 
     @Override
@@ -85,19 +128,25 @@ public class OrderServiceImpl implements OrderServiceInterface {
 
     @Override
     public List<SellerOrderDto> getSellerOrders(Long sellerId) {
+
         return orderRepo.findOrdersBySeller(sellerId).stream()
                 .flatMap(o -> o.getLineItems().stream()
                         .filter(li -> li.getProduct().getSeller().getId().equals(sellerId))
                         .map(li -> {
+
                             SellerOrderDto dto = new SellerOrderDto();
                             dto.setOrderId(o.getOrderId());
                             dto.setProductName(li.getProduct().getName());
                             dto.setQuantity(li.getQuantity());
-                            dto.setAmount(li.getProduct().getPrice().multiply(BigDecimal.valueOf(li.getQuantity())));
+                            dto.setAmount(
+                                    li.getProduct().getPrice()
+                                            .multiply(BigDecimal.valueOf(li.getQuantity()))
+                            );
                             dto.setStatus(o.getStatus());
                             dto.setOrderDate(o.getOrderDate());
                             return dto;
-                        })).toList();
+                        })
+                ).toList();
     }
 
     @Override
@@ -107,13 +156,14 @@ public class OrderServiceImpl implements OrderServiceInterface {
     }
 
     private OrderDto toDto(Orders o) {
+
         OrderDto dto = new OrderDto();
         dto.setOrderId(o.getOrderId());
-        dto.setCustomerId(o.getCustomer().getUser().getId()); // Return userId (120)
+        dto.setCustomerId(o.getCustomer().getUser().getId());
         dto.setStatus(o.getStatus());
         dto.setOrderDate(o.getOrderDate());
         dto.setTotalAmount(o.getTotalAmount());
+
         return dto;
     }
-    
 }
